# isp-manager

./: .env  .gitignore  Cargo.toml  README.md  docker-compose.yaml
.run/: Watch backend.run.xml  Watch frontend.run.xml
backend/: Cargo.toml
backend/db-scripts/: drop.sql  procedures.sql  seeding.sql  tables.sql  triggers.sql
backend/src/: config.rs  db.rs  error.rs  main.rs
backend/src/contract/: handler.rs  mod.rs  repository.rs
backend/src/customer/: handler.rs  mod.rs  repository.rs
backend/src/invoice/: handler.rs  mod.rs  repository.rs
backend/src/payment/: handler.rs  mod.rs  repository.rs
backend/src/subscription/: handler.rs  mod.rs  repository.rs
common/: Cargo.toml
common/src/: contract.rs  customer.rs  invoice.rs  lib.rs  payment.rs  subscription.rs
frontend/: Cargo.toml  index.html
frontend/src/: app.rs  lib.rs
frontend/src/views/: home.rs  mod.rs
frontend/src/views/contract/: create.rs  detail.rs  edit.rs  mod.rs
frontend/src/views/customer/: create.rs  detail.rs  edit.rs  list.rs  mod.rs
frontend/src/views/invoice/: create.rs  detail.rs  mod.rs
frontend/src/views/payment/: create.rs
frontend/src/views/subscription/: create.rs  detail.rs  edit.rs  list.rs  mod.rs
frontend/styles/: styles.scss
