[package]
name = "backend"
version = "0.1.0"
authors = ["Sami Barbut-Dica"]
edition = "2018"

[dependencies]
tokio = { version = "1.6.1", features = ["macros", "rt-multi-thread"] }
warp = "0.3.1"
serde = {version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.3"
thiserror = "1.0.24"
oracle = { version = "0.5.7", features = ["chrono"] }
r2d2-oracle = "0.6.0"
lazy_static = "1.4.0"
envy = "0.4.2"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }

[profile.dev]
debug = 0

