[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "=1.0.126", features = ["derive"] }
serde_json = "1.0.64"
serde_path_to_error = "0.1.3"
validator = { version = "0.16.1", features = ["derive", "phone"] }
chrono = { version = "0.4.31", features = ["serde"] }
lazy_static = "1.4.0"
regex = "1.7.3"
