[package]
name = "frontend"
version = "0.1.0"
authors = ["Sami Barbut-Dica"]
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
wasm-bindgen = "0.2.67"
wasm-bindgen-futures = "0.4.18"
wasm-logger = "0.2.0"
gloo-net = "0.5.0"
web-sys = { version = "0.3", features = ["HtmlMetaElement", "Document", "Element", "DocumentFragment", "HtmlTemplateElement", "MediaQueryList"] }
material-yew = { version = "0.3.0", features = ["full"] }
serde_json = "1"
serde = { version = "=1.0.126", features = ["derive"] }
anyhow = "1"
yew-router = "0.17.0"
log = "0.4.20"
validator = { version = "0.16.1", features = ["derive"] }
chrono = { version = "0.4.31", features = ["serde"] }
common = { version = "0.1.0", path = "../common" }